--- a/revised/REVISED_Draft_gamedesign/html/0.0_Homepage.html
+++ b/revised/REVISED_Draft_gamedesign/html/0.0_Homepage.html
@@ -3,7 +3,7 @@
 
 <head>
     <title>Games to play in quarantine</title>
-    <link rel="stylesheet" href="/css/game_des.css">
+    <link rel="stylesheet" href="../css/game_des.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
